objects/vlocity_cmt__AccountPriceAdjustment__c.object
<CustomObject>
    <description>Represents a specific discount, fee, override price or charge applied to a specific asset, contract or billing account. The price or adjustment indicates its provisioning status and dates such as the date it was applied to the customer&apos;s subscription as well as effective dates for limited time pricing.</description>
    <fields>
        <fullName>vlocity_cmt__AccountAppliedPromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applied Promotion</label>
        <referenceTo>vlocity_cmt__AccountAppliedPromotion__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentPricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipName>AccountPricingAdjustments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliedDate__c</fullName>
        <label>Date Applied</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationDate__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationStatus__c</fullName>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List Entry</label>
        <referenceTo>vlocity_cmt__PriceListEntry__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementGlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Element Version</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableCode__c</fullName>
        <formula>vlocity_cmt__PricingVariableID__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Pricing Variable Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjusted Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <label>Provisioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReasonForCancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>